give img an initial size to prevent load flickering

--- a/stylesheets/partials/_figures.scss
+++ b/stylesheets/partials/_figures.scss
@@ -51,6 +51,8 @@
 	img {
 		border-radius: 50%;
 		margin: 0 4px;
+		width: 64px;
+		height: 64px;
 	}
 	i {
 		border: 1px solid #fff;
